--- a/src/styles/LinksTop.css
+++ b/src/styles/LinksTop.css
@@ -51,6 +51,7 @@
 #description {
     position: relative;
     width: 198px;
+    max-width: 100%;
     z-index: 40;
     text-align: left;
     color: #254489;
@@ -65,6 +66,7 @@
 #table-of-contents {
     position: relative;
     width: 323px;
+    max-width: 100%;
     z-index: 50;
     text-align: left;
     color: #254489;
